@@ -35,16 +35,18 @@ public class NuovoOrdineController extends HttpServlet {
 	protected void doPost(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
 		response.setContentType("application/json");
-		Date data = null;
+		String dataS = new String(request.getParameter("date"));
+		String oraS = new String(request.getParameter("ora"));
+		Date data = new Date();
 		try {
-			data = new SimpleDateFormat("dd-MM-yyyy").parse(request.getParameter("data"));
+			data = new SimpleDateFormat("yyyy-MM-dd").parse(dataS);
 		} catch (ParseException e2) {
 			// TODO Auto-generated catch block
 			e2.printStackTrace();
 		}
-		Date ora = null;
+		Date ora = new Date();
 		try {
-			 ora = new SimpleDateFormat("kk-mm").parse(request.getParameter("ora"));
+			 ora = new SimpleDateFormat("kk:mm").parse(oraS);
 		} catch (ParseException e1) {
 			// TODO Auto-generated catch block
 			e1.printStackTrace();
@@ -52,7 +54,7 @@ public class NuovoOrdineController extends HttpServlet {
 		String comune = new String(request.getParameter("comune"));
 		String provincia = new String(request.getParameter("provincia"));
 		String indirizzo = new String(request.getParameter("indirizzo"));
-		Double totale = new Double(request.getParameter("totale"));
+		Double totale = Double.valueOf(request.getParameter("totale"));
 		String note_cliente = new String(request.getParameter("note_cliente"));
 		String cliente_mail = new String(request.getParameter("cliente_mail"));
 		String chef_mail = new String(request.getParameter("chef_mail"));
